--- a/demo/src/main/resources/templates/proveedores.html
+++ b/demo/src/main/resources/templates/proveedores.html
@@ -113,6 +113,9 @@
             <span class="close">&times;</span>
             <h2>Añadir Proveedor</h2>
             <form method="post" action="/insertProveedor">
+                <label>Nit Empresa:<br>
+                    <input type="text" id="id_proveedor" name="id_proveedor" placeholder="Ej. 1" required>
+                </label><br>
                 <label>Nombre de la Empresa:<br>
                     <input type="text" id="nombreempresa" name="nombre_empresa" placeholder="Ej. Compumax" required>
                 </label><br>
