--- a/demo/src/main/resources/templates/principal.html
+++ b/demo/src/main/resources/templates/principal.html
@@ -34,11 +34,11 @@
             <button onclick="location.href='/Pedidos'" class="nav-button">Pedidos</button>
             <button onclick="location.href='/Compras'" class="nav-button">Compras</button>
             <button onclick="location.href='/Transacciones'" class="nav-button">Transacciones</button>
-            <button class="nav-button">Informes</button>
         </aside>
         <main>
-
+            <div><h1 style="text-align: center;">Notificaciones</h1></div>
             <div class="dashboard">
+                
                 <div class="card">
                     <h3>Transacciones Recientes</h3>
                     <div class="table-container">
