--- a/demo/src/main/resources/templates/productos.html
+++ b/demo/src/main/resources/templates/productos.html
@@ -33,7 +33,6 @@
             <button onclick="location.href='/Pedidos'" class="nav-button">Pedidos</button>
             <button onclick="location.href='/Compras'" class="nav-button">Compras</button>
             <button onclick="location.href='/Transacciones'" class="nav-button">Transacciones</button>
-            <button class="nav-button">Informes</button>
         </aside>
         <main>
 
@@ -65,8 +64,9 @@
                                     <th>Nombre</th>
                                     <th>Precio Venta</th>
                                     <th>Cantidad en stock</th>
+                                    <th>Marca</th>
                                     <th>Imagen</th>
-                                    <th>Proveedor</th>
+                                    <th>Categoria</th>
                                     <th>Eliminar</th>
                                     <th>Editar</th>
                                 </tr>
@@ -78,14 +78,12 @@
                                         th:text="'$' + ${#numbers.formatDecimal(producto.precio_venta_unitario, 1, 'COMMA', 2, 'POINT')}">
                                     </td>
                                     <td th:text="${producto.cantidad_en_stock}"></td>
+                                    <td th:text="${producto.idmarca.nombre}"></td>
                                     <td>
                                         <img th:src="${producto.url_imagen}" alt="Imagen de [[${producto.nombre}]]"
                                             style="max-width: 80px; max-height: 80px;">
                                     </td>
-                                    <td
-                                        th:text="${producto.proveedor != null ? producto.proveedor.nombre_empresa : 'Sin proveedor'}">
-                                        Sin proveedor
-                                    </td>
+                                    <td th:text="${producto.idcategoria.nombre}"></td>
                                     <td>
                                         <form th:action="@{/deleteProducto}" method="post">
                                             <input type="hidden" name="idproducto" th:value="${producto.id_producto}" />
@@ -104,8 +102,7 @@
              data-nombre=${producto.nombre},
              data-precio=${producto.precio_venta_unitario},
              data-cantidad=${producto.cantidad_en_stock},
-             data-url=${producto.url_imagen},
-             data-proveedor=${producto.proveedor != null ? producto.proveedor.id_proveedor : ''}">
+             data-url=${producto.url_imagen}">
                                                 Editar Producto
                                             </button>
                                         </div>
@@ -129,11 +126,18 @@
                 <label>Precio Unitario:<br>
                     <input type="text" id="PrecioVenta" name="precio_venta_unitario" placeholder="Ej. 200" required>
                 </label><br>
-                <label>Proveedor:</label>
-                <select name="proveedorId" required>
-                    <option th:each="prov : ${proveedores}" th:value="${prov.id_proveedor}"
-                        th:text="${prov.nombre_empresa}"></option>
-                </select>
+                <label>Marca:<br>
+                    <select name="Select" required>
+                        <option th:each="marca : ${listaMarcas}" th:value="${marca.id}"
+                            th:text="${marca.nombre}"></option>
+                    </select>
+                    </label><br>
+                    <labal>Categoria:<br>
+                        <select name="Select" required>
+                            <option th:each="categoria : ${listaCategorias}" th:value="${categoria.id}"
+                                th:text="${categoria.nombre}"></option>
+                        </select>
+                </label><br>
 
                 <label>URL Imagen:<br>
                     <input type="text" id="url" name="url_imagen"
@@ -159,14 +163,7 @@
                 <label>Precio Unitario:<br>
                     <input type="number" step="0.01" id="precioProductoEdit" name="precio_venta_unitario" required>
                 </label><br>
-                <label>Cantidad en stock:<br>
-                    <input type="number" id="cantidadProductoEdit" name="cantidad_en_stock" required>
-                </label><br>
-                <label>Proveedor:</label>
-                <select id="proveedorEdit" name="proveedorId" required>
-                    <option th:each="prov : ${proveedores}" th:value="${prov.id_proveedor}"
-                        th:text="${prov.nombre_empresa}"></option>
-                </select>
+                
                 <label>URL Imagen:<br>
                     <input type="text" id="urlProductoEdit" name="url_imagen" required>
                 </label><br>
@@ -206,9 +203,7 @@
                 document.getElementById('idProductoEdit').value = this.getAttribute('data-id');
                 document.getElementById('nombreProductoEdit').value = this.getAttribute('data-nombre');
                 document.getElementById('precioProductoEdit').value = this.getAttribute('data-precio');
-                document.getElementById('cantidadProductoEdit').value = this.getAttribute('data-cantidad');
-                document.getElementById('urlProductoEdit').value = this.getAttribute('data-url');
-                document.getElementById('proveedorEdit').value = this.getAttribute('data-proveedor');
+                document.getElementById('urlProductoEdit').value = this.getAttribute('data-url'); 
                 productEditModal.classList.add('show'); // <--- Corrección aquí
             });
         });
